--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.8.6",
     "@astrojs/check": "^0.7.0",
+    "@astrojs/preact": "^3.3.0",
+    "@astrojs/tailwind": "^5.1.0",
+    "@nanostores/preact": "^0.5.1",
+    "astro": "^4.8.6",
+    "astro-compress": "^2.2.23",
+    "nanostores": "^0.10.3",
+    "preact": "^10.22.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
 }
