--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@astrojs/preact": "^3.3.0",
     "@astrojs/tailwind": "^5.1.0",
     "@nanostores/preact": "^0.5.1",
-    "astro": "^4.8.6",
-    "astro-compress": "^2.2.23",
+    "astro": "^4.11.0",
+    "astro-compress": "^2.2.28",
+    "codegpt-nextjs": "file:c:/Users/santi/.vscode/extensions/danielsanmedium.dscodegpt-3.4.0/standalone",
+    "flowbite": "^2.4.1",
     "nanostores": "^0.10.3",
     "preact": "^10.22.0",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "tailwindcss": "^3.4.4",
+    "tailwindcss-animated": "^1.1.2",
+    "typescript": "^5.5.2"
   }
 }
