--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "preact": "^10.25.4",
     "tailwindcss-animated": "^2.0.0",
     "typescript": "^5.7.3"
+  },
+  "devDependencies": {
+    "sass-embedded": "^1.85.0"
   }
 }
