--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -2,6 +2,9 @@
 	"version": 3,
 	"routes": [
 		{
+			"handle": "filesystem"
+		},
+		{
 			"src": "^/_astro/(.*)$",
 			"headers": {
 				"cache-control": "public, max-age=31536000, immutable"
@@ -9,86 +12,83 @@
 			"continue": true
 		},
 		{
-			"handle": "filesystem"
-		},
-		{
-			"src": "^\\/_server-islands\\/([^/]+?)\\/?$",
+			"src": "^/_server-islands/([^/]+?)/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/_image\\/?$",
+			"src": "^/_image/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/api\\/auth\\/register\\/?$",
+			"src": "^/api/auth/register/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/api\\/auth\\/signin\\/?$",
+			"src": "^/api/auth/signin/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/api\\/auth\\/signout\\/?$",
+			"src": "^/api/auth/signout/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/api\\/check-nickname\\/?$",
+			"src": "^/api/check-nickname/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/api\\/follow-actions\\/?$",
+			"src": "^/api/follow-actions/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/api\\/profile\\/?$",
+			"src": "^/api/profile/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/api\\/update-all-user\\/?$",
+			"src": "^/api/update-all-user/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/auth\\/register\\/?$",
+			"src": "^/auth/register/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/auth\\/signin\\/?$",
+			"src": "^/auth/signin/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/biologia\\/?$",
+			"src": "^/biologia/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/dashboard\\/?$",
+			"src": "^/dashboard/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/develop\\/?$",
+			"src": "^/develop/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/histologia\\/?$",
+			"src": "^/histologia/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/microbiologia\\/?$",
+			"src": "^/microbiologia/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/parasitologia\\/?$",
+			"src": "^/parasitologia/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/testing\\/?$",
+			"src": "^/testing/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/user\\/([^/]+?)\\/?$",
+			"src": "^/user/([^/]+?)/?$",
 			"dest": "_render"
 		},
 		{
-			"src": "^\\/$",
+			"src": "^/$",
 			"dest": "_render"
 		}
 	]
